cluster/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-deployment
  namespace: stirling-pdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: DISABLE_ADDITIONAL_FEATURES
              value: "false"
            - name: DOCKER_ENABLE_SECURITY
              value: "true"
            - name: SECURITY_ENABLELOGIN
              value: "true"
            - name: SECURITY_LOGINMETHOD
              value: oauth2
            - name: SECURITY_OAUTH2_ENABLED
              value: "true"
            - name: SECURITY_OAUTH2_ISSUER
              # trailing slash is important
              value: https://authentik.nathanv.app/application/o/stirling-pdf/
            - name: SECURITY_OAUTH2_AUTOCREATEUSER
              value: "true"
            - name: SECURITY_OAUTH2_USEASUSERNAME
              value: preferred_username
            - name: SECURITY_OAUTH2_SCOPES
              value: openid,profile,email
            - name: SECURITY_OAUTH2_PROVIDER
              value: Authentik
          image: cr.nathanv.app/ghcr.io/stirling-tools/stirling-pdf:3.1.0-fat
          livenessProbe:
            httpGet:
              path: /api/v1/info/status
              port: 8080
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
          name: stirling-pdf
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/share/tessdata
              name: stirling-pdf-vol-ocr
            - mountPath: /configs
              name: stirling-pdf-vol-configs
      volumes:
        - name: stirling-pdf-vol-ocr
          persistentVolumeClaim:
            claimName: stirling-pdf-pvc-ocr
        - name: stirling-pdf-vol-configs
          persistentVolumeClaim:
            claimName: stirling-pdf-pvc-configs
