cluster/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf-service
  namespace: stirling-pdf
spec:
  type: ClusterIP
  selector:
    app: stirling-pdf
  ports:
    - port: 8080
      protocol: TCP
