cluster/stirling-pdf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-route
  namespace: stirling-pdf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling-pdf.nathanv.app`)
      kind: Rule
      services:
        - name: stirling-pdf-service
          port: 8080
      middlewares:
        - name: stirling-pdf-login-redirect
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
